Fix mobile view: Increase bottom padding for free bots list to avoid footer overlap

--- a/src/pages/free-bots/free-bots.scss
+++ b/src/pages/free-bots/free-bots.scss
@@ -12,7 +12,8 @@
 
     @include mobile-or-tablet-screen {
         height: var(--tab-content-height-mobile);
-        padding: 1.6rem;
+        padding: 1.6rem 1.6rem 12rem;
+        /* Add extra bottom padding for footer */
     }
 
     &__header {
